Closed Bug 548993 Opened 14 years ago Closed 14 years ago

Wrong return type from CSP inline-script check

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dveditz, Assigned: dveditz)

References

Details

(Keywords: regression)

Attachments

(1 file)

Attached patch fix return valueSplinter Review
Natch is right in bug 515442 comment 15 -- the code ends up returning a boolean instead of a nsresult.

Notice the rest of the file doesn't use NS_ENSURE_ macros much, could change this to 
  if (NS_FAILED((rv = csp->etc))) {
    return rv;
  }
if preferred.
Attachment #429258 - Flags: review?(jonas)
Assignee: nobody → dveditz
http://hg.mozilla.org/mozilla-central/rev/0780abb1f723
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: