bug 548993 wrong return type from CSP inline script check, r=sicking